--- a/src/main/java/com/farkasch/barista/style.css
+++ b/src/main/java/com/farkasch/barista/style.css
@@ -7,6 +7,17 @@
 }
 
 #switch-menu__item--selected{
-  -fx-background-color: blue;
+  -fx-background-color: #C5C5C5;
   -fx-color-label-visible: white;
+}
+
+#folder{
+  -fx-min-width: 100%;
+  -fx-background-color: #F4F4F4;
+  -fx-text-alignment: left;
+}
+
+#folder:hover {
+  -fx-background-color: grey;
+  -fx-text-fill: #F4F4F4;
 }
