--- a/src/main/java/com/farkasch/barista/style.css
+++ b/src/main/java/com/farkasch/barista/style.css
@@ -3,12 +3,21 @@
 }
 
 #switch-menu__item{
+  -fx-background-color: #F4F4F4;
+  -fx-color-label-visible: black;
+  -fx-background-radius: 0;
+}
 
+#switch-menu__item:hover{
+  -fx-background-color: #7A7A7A;
+  -fx-color-label-visible: white;
+  -fx-background-radius: 0;
 }
 
 #switch-menu__item--selected{
   -fx-background-color: #C5C5C5;
   -fx-color-label-visible: white;
+  -fx-background-radius: 0;
 }
 
 #folder{
