Created basic syntax highlighting. Primitives are orange, strings are green.

--- a/src/main/resources/codinginterface/codearea.css
+++ b/src/main/resources/codinginterface/codearea.css
@@ -48,5 +48,13 @@ html, body {
   font-weight: bold;
   font-size: 12px;
   overflow-x : scroll;
-  white-space: nowrap;
+  white-space: pre;
+}
+
+.primitive {
+  color: orangered;
+}
+
+.string{
+  color: green;
 }
