syntax highlighting now works for methods

--- a/src/main/resources/codinginterface/codearea.css
+++ b/src/main/resources/codinginterface/codearea.css
@@ -51,10 +51,14 @@ html, body {
   white-space: pre;
 }
 
-.primitive {
-  color: orangered;
+.language {
+  color: blue;
 }
 
 .string{
   color: green;
+}
+
+.method{
+  color: darkcyan;
 }
