files/folder with spaces are now supported

--- a/src/main/java/com/farkasch/barista/style.css
+++ b/src/main/java/com/farkasch/barista/style.css
@@ -23,7 +23,7 @@
 #folder{
   -fx-min-width: 100%;
   -fx-background-color: #F4F4F4;
-  -fx-text-alignment: left;
+  -fx-alignment: LEFT;
 }
 
 #folder:hover {
