Java code can now be compiled and run from the side menu (wip). Started implementing more advanced compiling (jars etc.).

--- a/src/main/java/com/farkasch/barista/style.css
+++ b/src/main/java/com/farkasch/barista/style.css
@@ -30,3 +30,11 @@
   -fx-background-color: grey;
   -fx-text-fill: #F4F4F4;
 }
+
+#side-menu {
+  -fx-background-color: grey;
+}
+
+#side-menu__content {
+  -fx-background-color: grey;
+}
