Implemented getter, setter and constructor generation.

--- a/src/main/java/com/farkasch/barista/style.css
+++ b/src/main/java/com/farkasch/barista/style.css
@@ -30,8 +30,9 @@
   -fx-text-fill: #F4F4F4;
 }
 
-#folder--on-drag-entered{
-  -fx-background-color: #91f69b;
+
+#folder--on-drag-entered, #folder--selected{
+  -fx-background-color: grey;
   -fx-alignment: center-left;
 }
 
