--- a/src/main/java/com/farkasch/barista/style.css
+++ b/src/main/java/com/farkasch/barista/style.css
@@ -6,18 +6,28 @@
   -fx-background-color: #F4F4F4;
   -fx-color-label-visible: black;
   -fx-background-radius: 0;
+  -fx-border-radius: 0;
 }
 
 #switch-menu__item:hover, #switch-menu__item--selected:hover{
   -fx-background-color: #7A7A7A;
   -fx-color-label-visible: white;
   -fx-background-radius: 0;
+  -fx-border-radius: 0;
 }
 
 #switch-menu__item--selected{
   -fx-background-color: #C5C5C5;
   -fx-color-label-visible: white;
   -fx-background-radius: 0;
+  -fx-border-radius: 0;
+}
+
+#switch-menu__item:disabled{
+  -fx-background-color: #EBEBE4;
+  -fx-color-label-visible: grey;
+  -fx-background-radius: 0;
+  -fx-border-radius: 0;
 }
 
 #folder-dropdown__item{
