--- a/src/main/resources/codinginterface/codemirror-5.65.3/lib/codemirror.css
+++ b/src/main/resources/codinginterface/codemirror-5.65.3/lib/codemirror.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Hack';
-  src: url('../../fonts/Hack-Bold.ttf') format('truetype');
+  src: url('../../../fonts/Hack-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'Hack';
-  src: url('../../fonts/Hack-BoldItalic.ttf') format('truetype');
+  src: url('../../../fonts/Hack-BoldItalic.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: 'Hack';
-  src: url('../../fonts/Hack-Regular.ttf') format('truetype');
+  src: url('../../../fonts/Hack-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: 'Hack';
-  src: url('../../fonts/Hack-Italic.ttf') format('truetype');
+  src: url('../../../fonts/Hack-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
